Navbar now collapses on anchor click. Fixed minor issue with scrollspy.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
 	scroll-behavior: smooth;
-	scroll-padding-top: 55px;
+	scroll-padding-top: 54px;
 }
 
 body {
